--- a/cv.tex
+++ b/cv.tex
@@ -17,11 +17,11 @@
 		\url{github.com/404}
 		\url{stackoverflow.com/404}
 	\section{Sprachen}
-		{\color{lightgray}$\varheart$} Chef, Whitespace
+		\heart Chef, Whitespace
 		LOLCODE, Ook!
 		Klingonisch, Romulanisch
 	\section{Technologien}
-		Technologie \heart X
+		\heart Technologie X
 		Framework Y, \LaTeX
 	\section{Interessen}
 		Interesse 1
