--- a/cv.tex
+++ b/cv.tex
@@ -29,8 +29,7 @@
 		Hobby 1
 		Hobby 2
 \end{rside}
-
-\begin{lside}
+\vspace{-2.15cm}
 \section{Berufserfahrung}
 \begin{entrylist}
     \entry{Okt13-heute}{Firma A}{Position 1B}%
@@ -46,7 +45,6 @@
     	\entry{Jun05-Aug08}{Milchbar}{Praktikant}%
     	\site{Praktikum im Gemüseschälen}
 \end{entrylist}%
-
 \section{Studium}
 \begin{entrylist}
 \entry{Jan00-Jun04}{Parapsychologie}{Master of Asdf}%
@@ -58,5 +56,4 @@
 	\spec{Vertiefung 2}%
 	\spec{Vertiefung 3}%
 \end{entrylist}
-\end{lside}
 \end{document}
